# StickyLife

./: .cursorrules  .gitignore  DATA_MODEL.md  DEPLOY.md  QUICK_START.md  README.md  TAURI_SETUP.md  TECH_RULES.md  TEST_DATA.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-and-release.yml
electron/: main.ts  preload.ts  tsconfig.json
src/: App.css  App.tsx  electron-styles.d.ts  electron.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: DesktopWidget.tsx  DockedPuffy.tsx  ErrorBoundary.tsx  FloatingPuffy.tsx  KRTaskCard.tsx  MascotContainer.tsx  MascotDebugPanel.tsx  MergedFocusCard.tsx  Neno.css  Neno.tsx  NenoFigma.tsx  StarAnimation.tsx  TodayFocus.css  TodayFocus.tsx  TodayFocusArea.tsx  WeekDetail.css  WeekDetail.tsx  WeekDot.css  WeekDot.tsx
src/hooks/: useAppState.ts  useDraggable.ts  useMascotState.ts  useSprintProgress.ts
src/store/: appReducer.ts  persistence.ts  useStore.ts
src/types/: index.ts
src/utils/: dataGenerator.ts  storage.ts  testDataGenerator.ts  weekDayBinding.ts
